@@ -1,4 +1,4 @@
-/* $Id: miniwget.c,v 1.56 2012/05/01 16:16:08 nanard Exp $ */
+/* $Id: miniwget.c,v 1.57 2012/06/23 22:35:58 nanard Exp $ */
 /* Project : miniupnp
  * Website : http://miniupnp.free.fr/
  * Author : Thomas Bernard
@@ -36,6 +36,7 @@
 #include <sys/socket.h>
 #include <netinet/in.h>
 #include <arpa/inet.h>
+#include <net/if.h>
 #include <netdb.h>
 #define closesocket close
 /* defining MINIUPNPC_IGNORE_EINTR enable the ignore of interruptions
@@ -289,7 +290,7 @@ static void *
 miniwget3(const char * host,
           unsigned short port, const char * path,
           int * size, char * addr_str, int addr_str_len,
-          const char * httpversion)
+          const char * httpversion, unsigned int scope_id)
 {
 	char buf[2048];
     int s;
@@ -299,7 +300,7 @@ miniwget3(const char * host,
 	void * content;
 
 	*size = 0;
-	s = connecthostport(host, port);
+	s = connecthostport(host, port, scope_id);
 	if(s < 0)
 		return NULL;
 
@@ -392,22 +393,27 @@ miniwget3(const char * host,
 static void *
 miniwget2(const char * host,
 		  unsigned short port, const char * path,
-		  int * size, char * addr_str, int addr_str_len)
+		  int * size, char * addr_str, int addr_str_len,
+          unsigned int scope_id)
 {
 	char * respbuffer;
 
-	respbuffer = miniwget3(host, port, path, size, addr_str, addr_str_len, "1.1");
-/*
-	respbuffer = miniwget3(host, port, path, size, addr_str, addr_str_len, "1.0");
+#if 1
+	respbuffer = miniwget3(host, port, path, size,
+	                       addr_str, addr_str_len, "1.1", scope_id);
+#else
+	respbuffer = miniwget3(host, port, path, size,
+	                       addr_str, addr_str_len, "1.0", scope_id);
 	if (*size == 0)
 	{
 #ifdef DEBUG
 		printf("Retrying with HTTP/1.1\n");
 #endif
 		free(respbuffer);
-		respbuffer = miniwget3(host, port, path, size, addr_str, addr_str_len, "1.1");
+		respbuffer = miniwget3(host, port, path, size,
+		                       addr_str, addr_str_len, "1.1", scope_id);
 	}
-*/
+#endif
 	return respbuffer;
 }
 
@@ -424,7 +430,10 @@ miniwget2(const char * host,
  * Return values :
  *    0 - Failure
  *    1 - Success         */
-int parseURL(const char * url, char * hostname, unsigned short * port, char * * path)
+int
+parseURL(const char * url,
+         char * hostname, unsigned short * port,
+         char * * path, unsigned int * scope_id)
 {
 	char * p1, *p2, *p3;
 	if(!url)
@@ -440,7 +449,29 @@ int parseURL(const char * url, char * hostname, unsigned short * port, char * * 
 	if(*p1 == '[')
 	{
 		/* IP v6 : http://[2a00:1450:8002::6a]/path/abc */
+		char * scope;
+		scope = strchr(p1, '%');
 		p2 = strchr(p1, ']');
+		if(p2 && scope && scope < p2 && scope_id) {
+			/* parse scope */
+#ifdef IF_NAMESIZE
+			char tmp[IF_NAMESIZE];
+			int l;
+			scope++;
+			/* "%25" is just '%' in URL encoding */
+			if(scope[0] == '2' && scope[1] == '5')
+				scope += 2;	/* skip "25" */
+			l = p2 - scope;
+			if(l >= IF_NAMESIZE)
+				l = IF_NAMESIZE - 1;
+			memcpy(tmp, scope, l);
+			tmp[l] = '\0';
+			*scope_id = if_nametoindex(tmp);
+			if(*scope_id == 0) {
+				*scope_id = (unsigned int)strtoul(tmp, NULL, 10);
+			}
+#endif
+		}
 		p3 = strchr(p1, '/');
 		if(p2 && p3)
 		{
@@ -490,22 +521,26 @@ int parseURL(const char * url, char * hostname, unsigned short * port, char * * 
 	return 1;
 }
 
-void * miniwget(const char * url, int * size)
+void *
+miniwget(const char * url, int * size, unsigned int scope_id)
 {
 	unsigned short port;
 	char * path;
 	/* protocol://host:port/chemin */
 	char hostname[MAXHOSTNAMELEN+1];
 	*size = 0;
-	if(!parseURL(url, hostname, &port, &path))
+	if(!parseURL(url, hostname, &port, &path, &scope_id))
 		return NULL;
 #ifdef DEBUG
-	printf("parsed url : hostname='%s' port=%hu path='%s'\n", hostname, port, path);
+	printf("parsed url : hostname='%s' port=%hu path='%s' scope_id=%u\n",
+	       hostname, port, path, scope_id);
 #endif
-	return miniwget2(hostname, port, path, size, 0, 0);
+	return miniwget2(hostname, port, path, size, 0, 0, scope_id);
 }
 
-void * miniwget_getaddr(const char * url, int * size, char * addr, int addrlen)
+void *
+miniwget_getaddr(const char * url, int * size,
+                 char * addr, int addrlen, unsigned int scope_id)
 {
 	unsigned short port;
 	char * path;
@@ -514,11 +549,12 @@ void * miniwget_getaddr(const char * url, int * size, char * addr, int addrlen)
 	*size = 0;
 	if(addr)
 		addr[0] = '\0';
-	if(!parseURL(url, hostname, &port, &path))
+	if(!parseURL(url, hostname, &port, &path, &scope_id))
 		return NULL;
 #ifdef DEBUG
-	printf("parsed url : hostname='%s' port=%hu path='%s'\n", hostname, port, path);
+	printf("parsed url : hostname='%s' port=%hu path='%s' scope_id=%u\n",
+	       hostname, port, path, scope_id);
 #endif
-	return miniwget2(hostname, port, path, size, addr, addrlen);
+	return miniwget2(hostname, port, path, size, addr, addrlen, scope_id);
 }
 
