@@ -1,7 +1,7 @@
-/* $Id: miniwget.h,v 1.6 2010/12/09 16:11:33 nanard Exp $ */
+/* $Id: miniwget.h,v 1.7 2012/06/23 22:35:59 nanard Exp $ */
 /* Project : miniupnp
  * Author : Thomas Bernard
- * Copyright (c) 2005 Thomas Bernard
+ * Copyright (c) 2005-2012 Thomas Bernard
  * This software is subject to the conditions detailed in the
  * LICENCE file provided in this distribution.
  * */
@@ -16,11 +16,11 @@ extern "C" {
 
 LIBSPEC void * getHTTPResponse(int s, int * size);
 
-LIBSPEC void * miniwget(const char *, int *);
+LIBSPEC void * miniwget(const char *, int *, unsigned int);
 
-LIBSPEC void * miniwget_getaddr(const char *, int *, char *, int);
+LIBSPEC void * miniwget_getaddr(const char *, int *, char *, int, unsigned int);
 
-int parseURL(const char *, char *, unsigned short *, char * *);
+int parseURL(const char *, char *, unsigned short *, char * *, unsigned int *);
 
 #ifdef __cplusplus
 }
